--- a/ejemplos/1b/index.html
+++ b/ejemplos/1b/index.html
@@ -7,7 +7,7 @@
 
 		<br>
 		
-		<table border="1">
+		<table border="1" width="100%">
 			<tr>
 				<td>Pais</td>
 				<td>Provincia</td>
@@ -18,9 +18,7 @@
 			</tr>
 			<tr>
 				<td colspan="2">
-					 <video width="640" height="480" controls>
-					  <source src="./media/video.mp4" type="video/mp4">
-					</video> 
+					 abc
 				</td>
 			</tr>
 		</table>
