--- a/ejemplos/3/index.html
+++ b/ejemplos/3/index.html
@@ -6,11 +6,6 @@
 	<body>
 		<h1>Cuerpo...</h1> 
 
-		<br>
-		<br>
-
-		Algunas <b>palabras</b> pueden tener <b>negrita</b>
-
-		Podemos volver a los ejemplo <a href="../2/index.html">anterior</a> o en una nueva ventana a <a href="http://www.google.com.ar" target="_blank">google</a>
+		Nueva ventana a <a href="http://www.google.com.ar" target="_blank">google</a>
 	</body>
 </html>
